[package]
name = "rust-game"
version = "0.1.0"
resolver = "2"

[dependencies]
bitflags = "1.2.1"
lazy_static = "1.4.0"
libc = "0.2.92"
lyon_geom = "1.0.1"
num = "0.4.0"
sdl2-sys = "0.35.2"
c_vec = { version = ">= 1.0", optional = true }
raw-window-handle = { version = "0.4.2", optional = true }

[dev-dependencies]
rand = "0.7"
wgpu = { version = "0.12", features = ["spirv"] }
pollster = "0.2.4"
env_logger = "0.9.0"

[features]
unsafe_textures = []
default = []
gfx = ["c_vec", "sdl2-sys/gfx"]
mixer = ["sdl2-sys/mixer"]
image = ["sdl2-sys/image"]
ttf = ["sdl2-sys/ttf"]
# Use hidapi support in SDL. Only 2.0.12 and after
hidapi = []

use-bindgen = ["sdl2-sys/use-bindgen"]
use-pkgconfig = ["sdl2-sys/use-pkgconfig"]
use-vcpkg = ["sdl2-sys/use-vcpkg"]
use_mac_framework = ["sdl2-sys/use_mac_framework"]
bundled = ["sdl2-sys/bundled"]
static-link = ["sdl2-sys/static-link"]

[dependencies.sdl2]
version = "0.35.2"
features = ["default", "gfx", "mixer", "image", "ttf"]